--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "method-override": "^2.3.9",
     "mysql": "^2.14.1",
     "mysql2": "^1.4.1",
-    "sequelize": "^4.5.0"
+    "sequelize": "^4.6.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
@@ -26,5 +26,6 @@
   "bugs": {
     "url": "https://github.com/melaniecorchado/lifebestlived/issues"
   },
-  "homepage": "https://github.com/melaniecorchado/lifebestlived#readme"
+  "homepage": "https://github.com/melaniecorchado/lifebestlived#readme",
+  "devDependencies": {}
 }
