--- a/config/config.json
+++ b/config/config.json
@@ -1,7 +1,7 @@
 {
   "development": {
     "username": "root",
-    "password": "daisy731",
+    "password": "motiv8er",
     "database": "lifebestlived",
     "host": "127.0.0.1",
     "dialect": "mysql"
