--- a/config/config.json
+++ b/config/config.json
@@ -8,7 +8,7 @@
   },
   "test": {
     "username": "root",
-    "password": "Jmota05!",
+    "password": "motiv8er",
    "database": "lifebestlived",
     "host": "127.0.0.1",
     "dialect": "mysql"
